--- a/workloads.yaml
+++ b/workloads.yaml
@@ -7,14 +7,15 @@ spec:
     matchLabels:
       app: queue
   replicas: 1
-  template: # template for the pods
+  template:
     metadata:
       labels:
         app: queue
     spec:
       containers:
         - name: queue
-          image: richardchesterwood/k8s-fleetman-queue:release1
+          image: richardchesterwood/k8s-fleetman-queue:release2
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -25,14 +26,14 @@ spec:
     matchLabels:
       app: position-simulator
   replicas: 1
-  template: # template for the pods
+  template:
     metadata:
       labels:
         app: position-simulator
     spec:
       containers:
         - name: position-simulator
-          image: richardchesterwood/k8s-fleetman-position-simulator:release1
+          image: richardchesterwood/k8s-fleetman-position-simulator:release2
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -47,14 +48,14 @@ spec:
     matchLabels:
       app: position-tracker
   replicas: 1
-  template: # template for the pods
+  template:
     metadata:
       labels:
         app: position-tracker
     spec:
       containers:
         - name: position-tracker
-          image: richardchesterwood/k8s-fleetman-position-tracker:release1
+          image: richardchesterwood/k8s-fleetman-position-tracker:release3
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -68,14 +69,14 @@ spec:
     matchLabels:
       app: api-gateway
   replicas: 1
-  template: # template for the pods
+  template:
     metadata:
       labels:
         app: api-gateway
     spec:
       containers:
         - name: api-gateway
-          image: richardchesterwood/k8s-fleetman-api-gateway:release1
+          image: richardchesterwood/k8s-fleetman-api-gateway:release2
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
@@ -90,14 +91,14 @@ spec:
     matchLabels:
       app: webapp
   replicas: 1
-  template: # template for the pods
+  template:
     metadata:
       labels:
         app: webapp
     spec:
       containers:
         - name: webapp
-          image: richardchesterwood/k8s-fleetman-webapp-angular:release1
+          image: richardchesterwood/k8s-fleetman-webapp-angular:release2
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
